2016-03-09 Jan Kotanski <jankotan@gmail.com>
	* nxscreate: add onlinecp command
	* tagged as v1.18.0

2016-03-09 Jan Kotanski <jankotan@gmail.com>
	* nxscollect: improve file finding
	* tagged as v1.17.2

2016-03-07 Jan Kotanski <jankotan@gmail.com>
	* nxscollect: update help
	* tagged as v1.17.1

2016-03-07 Jan Kotanski <jankotan@gmail.com>
	* nxscollect: add setting postrun field name and filed attributes
	* add test mode
	* tagged as v1.17.0

2016-03-02 Jan Kotanski <jankotan@gmail.com>
	* add nxscollect for merging (issue #1)
	* tagged as v1.16.0

2016-02-12 Jan Kotanski <jankotan@gmail.com>
	* add options to nxscreate comp, e.g. nexus_path
	* fix for fetching sardana host
	* tagged as v1.15.0

2016-02-10 Jan Kotanski <jankotan@gmail.com>
	* support multiattribute device in  onlineds
	* remove dsonline
	* move ndtscreate_* implementation into nxscreate
	* make lower_case datasource names in deviceds
	* tagged as v1.14.0

2016-02-09 Jan Kotanski <jankotan@gmail.com>
	* fix for list of modules
	* tagged as v1.13.1

2016-02-09 Jan Kotanski <jankotan@gmail.com>
	* add modules into moduleAttributes dictionary
	* tagged as v1.13.0

2016-02-08 Jan Kotanski <jankotan@gmail.com>
	* add moduleAttributes dictionary to nxsdevicetools
	* improve creating datasources from online.xml
	* tagged as v1.12.0

2016-02-04 Jan Kotanski <jankotan@gmail.com>
	* add help for private component parameter (-p)
	* tagged as v1.11.1

2016-02-04 Jan Kotanski <jankotan@gmail.com>
	* add private component parameter (-p)
	* print component name on creating datasources forn online file
	* tagged as v1.11.0

2016-02-02 Jan Kotanski <jankotan@gmail.com>
	* remove parent parameter for datasources of datasource
	* tagged as v1.10.3

2016-02-02 Jan Kotanski <jankotan@gmail.com>
	* add datasources of datasources
	* tagged as v1.10.2

2016-02-01 Jan Kotanski <jankotan@gmail.com>
	* change order of displayed info and geometry in nxsconfig
	* tagged as v1.10.1
