@@ -12,6 +12,14 @@ hostname = socket.gethostname()
 # all SardanaHosts and DataBaseHosts should be known
 #
 knownHosts = {
+    'hasdelay': {'beamline': 'delay', 'masterHost': 'hasdelay',
+                 'user': 'delayusr', 'dbname': 'nxsconfig'},
+    'hasmfmc': {'beamline': 'fmc', 'masterHost': 'hasmfmc',
+                'user': 'delayusr', 'dbname': 'nxsconfig'},
+    'hasmlqj': {'beamline': 'lqj', 'masterHost': 'hasmlqj',
+                'user': 'lqjuser', 'dbname': 'nxsconfig'},
+    'haso111n': {'beamline': 'p09', 'masterHost': 'haso111n',
+                 'user': 'tnunez', 'dbname': 'nxsconfig'},
     'haso111tb': {'beamline': 'p09', 'masterHost': 'haso111tb',
                   'user': 'tnunez', 'dbname': 'nxsconfig'},
     'haso113b': {'beamline': 'p09', 'masterHost': 'haso113b',
@@ -24,6 +32,8 @@ knownHosts = {
                  'user': 'jkotan', 'dbname': 'nxsconfig'},
     'has6117b': {'beamline': 'p02', 'masterHost': 'has6117b',
                  'user': 'p02user', 'dbname': 'nxsconfig'},
+    'haspecsicl4': {'beamline': 'p02', 'masterHost': 'haspecsicl4',
+                    'user': 'lacluser', 'dbname': 'nxsconfig'},
     'haspp01eh1': {'beamline': 'p01', 'masterHost': 'haspp01eh1',
                    'user': 'p01user', 'dbname': 'nxsconfig'},
     'haspp01eh2': {'beamline': 'p01', 'masterHost': 'haspp01eh2',
@@ -52,8 +62,6 @@ knownHosts = {
                     'user': 'p06user', 'dbname': 'nxsconfig'},
     'hasp029rack': {'beamline': 'p06', 'masterHost': 'hasp029rack',
                     'user': 'p06user', 'dbname': 'nxsconfig'},
-    'hasgksspp07eh2a': {'beamline': 'p07', 'masterHost': 'hasgksspp07eh2a',
-                        'user': 'p07user', 'dbname': 'nxsconfig'},
     'haspp07eh2': {'beamline': 'p07', 'masterHost': 'haspp07eh2',
                    'user': 'p07user', 'dbname': 'nxsconfig'},
     'haspp08': {'beamline': 'p08', 'masterHost': 'haspp08',
@@ -72,22 +80,36 @@ knownHosts = {
                   'user': 'p10user', 'dbname': 'nxsconfig'},
     'haspp10lcx': {'beamline': 'p10', 'masterHost': 'haspp10lcx',
                    'user': 'p10user', 'dbname': 'nxsconfig'},
+    'haspp10lab': {'beamline': 'p10', 'masterHost': 'haspp10lab',
+                   'user': 'p10user', 'dbname': 'nxsconfig'},
+    'haspp11oh': {'beamline': 'p11', 'masterHost': 'haspp11oh',
+                  'user': 'p11user', 'dbname': 'nxsconfig'},
+    'haspp11sardana': {'beamline': 'p11', 'masterHost': 'haspp11sardana',
+                       'user': 'p11user', 'dbname': 'nxsconfig'},
     'haspp11user02': {'beamline': 'p11', 'masterHost': 'haspp11user02',
                       'user': 'p11user', 'dbname': 'nxsconfig'},
     'haspp21lab': {'beamline': 'p21', 'masterHost': 'haspp21lab',
                    'user': 'p21user', 'dbname': 'nxsconfig'},
-    'hasnp64': {'beamline': 'p64', 'masterHost': 'hasnp64',
-                'user': 'p64user', 'dbname': 'nxsconfig'},
-    'hasnp65': {'beamline': 'p65', 'masterHost': 'hasnp65',
-                'user': 'p65user', 'dbname': 'nxsconfig'},
-    'hasnp66': {'beamline': 'p66', 'masterHost': 'hasnp66',
-                'user': 'p66user', 'dbname': 'nxsconfig'},
     'haso107klx': {'beamline': 'p09', 'masterHost': 'haso107klx',
                    'user': 'kracht', 'dbname': 'nxsconfig'},
     'haso107d1': {'beamline': 'p09', 'masterHost': 'haso107d1',
                   'user': 'kracht', 'dbname': 'nxsconfig'},
     'hascmexp': {'beamline': 'cmexp', 'masterHost': 'hascmexp',
                  'user': 'cmexp', 'dbname': 'nxsconfig'},
+    'hasnp64': {'beamline': 'p64', 'masterHost': 'hasnp64',
+                'user': 'p64user', 'dbname': 'nxsconfig'},
+    'hasnp64oh': {'beamline': 'p64', 'masterHost': 'hasnp64oh',
+                  'user': 'p64user', 'dbname': 'nxsconfig'},
+    'hasnp65': {'beamline': 'p65', 'masterHost': 'hasnp65',
+                'user': 'p65user', 'dbname': 'nxsconfig'},
+    'hasnp66': {'beamline': 'p66', 'masterHost': 'hasnp66',
+                'user': 'p66user', 'dbname': 'nxsconfig'},
+    'hzgpp07eh1': {'beamline': 'p07', 'masterHost': 'hzgpp07eh1',
+                   'user': 'p07user', 'dbname': 'nxsconfig'},
+    'hzgpp07eh3': {'beamline': 'p07', 'masterHost': 'hzgpp07eh3',
+                   'user': 'p07user', 'dbname': 'nxsconfig'},
+    'hzgpp07eh4': {'beamline': 'p07', 'masterHost': 'hzgpp07eh4',
+                   'user': 'p07user', 'dbname': 'nxsconfig'},
 }
 
 
