@@ -1,5 +1,6 @@
-2016-03-09 Jan Kotanski <jankotan@gmail.com>
+2016-03-22 Jan Kotanski <jankotan@gmail.com>
 	* nxscreate: add onlinecp command
+	* nxsetup: add new servers
 	* tagged as v1.18.0
 
 2016-03-09 Jan Kotanski <jankotan@gmail.com>
